--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@segment/analytics.js-integration-kenshoo",
+  "name": "@astronomerio/analytics.js-integration-kenshoo",
   "description": "The Kenshoo analytics.js integration.",
   "version": "2.0.0",
   "keywords": [
@@ -14,14 +14,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/segment-integrations/analytics.js-integration-kenshoo.git"
+    "url": "git+https://github.com/astronomer-integrations/analytics.js-integration-kenshoo.git"
   },
-  "author": "Segment <friends@segment.com>",
+  "author": "Astronomer <info@astronomer.io>",
   "license": "SEE LICENSE IN LICENSE",
   "bugs": {
-    "url": "https://github.com/segment-integrations/analytics.js-integration-kenshoo/issues"
+    "url": "https://github.com/astronomer-integrations/analytics.js-integration-kenshoo/issues"
   },
-  "homepage": "https://github.com/segment-integrations/analytics.js-integration-kenshoo#readme",
+  "homepage": "https://github.com/astronomer-integrations/analytics.js-integration-kenshoo#readme",
   "dependencies": {
     "@ndhoule/includes": "^2.0.1",
     "@segment/analytics.js-integration": "^2.1.0",
